--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20.8.1'
 
       - name: Install independecies
-        run: npm ci
+        run: npm install
 
       - name: Build
         run: npm run make
